--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,7 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.3.0
-  shared_preferences: ^2.5.2
+  shared_preferences: 2.3.3
 
 dev_dependencies:
   flutter_test:
